@@ -42,6 +42,10 @@ Release date: TBA
 
   Closes #2608
 
+* The brain for nose was dropped. nose has been deprecated for 10 years and the brain required some maintenance.
+
+  Refs #2765
+
 What's New in astroid 3.3.11?
 =============================
 Release date: TBA
